# handbrake-daemon

./: .dockerignore  .gitignore  Dockerfile  H264 NVENC CQ27.json  docker-compose.dev.yaml  docker-compose.yaml  docker_apt_install.sh  docker_pip_install.sh  entrypoint.sh  mkv2mp4.sh  pyproject.toml  requirements.txt  worker.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
handbrake_daemon/: __main__.py
tests/: test_main.py
