[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handbrake-daemon"
version = "0.0.1"
description = "Monitors for video files and runs transcode with HandBrake"
requires-python = ">=3.11"
authors = [
  {name = "Libo Yin", email = "liboyin830@gmail.com"}
]
dependencies = [
  "pathlib-extensions@git+https://github.com/liboyin/pathlib-extensions.git",
  "pymediainfo",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_optional = true
